--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -1,27 +1,26 @@
-%s is the base name of the file and will have information like the round number and channel number appended to it
-params.FILE_BASENAME = 'exseqvc1rep1-F037';
 
-% Data loading and storage parameters; where the given folders are on disk
-params.INPUT_FILE_PATH = '/mp/nas2/DG/testRepo/F037/0_raw';
-params.deconvolutionImagesDir = '/mp/nas2/DG/testRepo/F037/1_deconvolution';
-params.colorCorrectionImagesDir = '/mp/nas2/DG/testRepo/F037/2_color-correction';
-params.normalizedImagesDir = '/mp/nas2/DG/testRepo/F037/3_normalization';
-params.registeredImagesDir = '/mp/nas2/DG/testRepo/F037/4_registration';
-params.punctaSubvolumeDir = '/mp/nas2/DG/testRepo/F037/5_puncta-extraction';
-params.basecallingResultsDir = '/mp/nas2/DG/testRepo/F037/6_base-calling';
-params.reportingDir = '/mp/nas2/DG/testRepo/F037/logs/imgs';
-params.logDir = '/mp/nas2/DG/testRepo/F037/logs';
+
+params.FILE_BASENAME = 'exseqvc1rep1-F037'
+
+% Data loading a storage parameters
+params.deconvolutionImagesDir = '/yourfolder/1_deconvolution';
+params.colorCorrectionImagesDir = '/yourfolder/2_color-correction';
+params.normalizedImagesDir = '/yourfolder/3_normalization';
+params.registeredImagesDir = '/yourfolder/4_registration';
+params.punctaSubvolumeDir = '/yourfolder/5_puncta-extraction';
+params.basecallingResultsDir = '/yourfolder/6_base-calling';
+params.reportingDir = '/yourfolder/logs/imgs';
+params.logDir = '/yourfolder/logs';
+
 %Microscope parameters
 params.XRES = .17;
 params.YRES = .17;
 params.ZRES = .4;
 
-
 %Experimental parameters
 params.REFERENCE_ROUND_WARP = 5;
 params.REFERENCE_ROUND_PUNCTA = 5;
 params.NUM_ROUNDS = 5;
-params.NUM_CHANNELS = 4;
 
 %params.MORPHOLOGY_ROUND = 5;
 %params.MORPHOLOGY_CHAN_STR = 'ch04';
@@ -35,11 +34,14 @@ params.COLOR_OFFSETS3D = [20,20,20];
 params.PUNCTA_SIZE_THRESHOLD = 30;
 params.PUNCTA_SIZE_MAX = 2000;
 params.PUNCTA_SIZE = 10; %Defines the cubic region around each puncta
-params.CHAN_STRS = {'ch00','ch01','ch02','ch03', 'ch04'};
+params.CHAN_STRS = {'ch00','ch01','ch02','ch03'};
+params.NUM_CHANNELS = length(params.CHAN_STRS);
+
 params.SHIFT_CHAN_STRS = {'ch00','ch01SHIFT','ch02SHIFT','ch03SHIFT'};
 
-
-params.PUNCTA_CHANNEL_SEG = 'summedNorm'; 
+%What is the color channel we will load from the registration outputs?
+%TODO: Need to explain this more. I believe this is normally summedNorm
+params.PUNCTA_CHANNEL_SEG = 'ch02SHIFT'; 
 
 %Base calling parameters
 params.COLOR_VEC = [1,2,3,4]; %Which channels are we comparing? (in case of empty chan)
@@ -58,30 +60,38 @@ params.MAXNUM_MISSINGROUND=1;
 params.USE_GPU_CUDA = false;
 
 %intermediate image format
-params.IMAGE_EXT = 'h5';
+params.IMAGE_EXT = 'tif';
 
 %input image format
-params.INPUT_IMAGE_EXT = 'h5';
+params.INPUT_IMAGE_EXT = 'tif';
 
 %Use intermediate tmp files in color-correction and normalization
 params.tempDir = '/mp/nvmeof0/tmp';
 
 % Define parameters for registration, titled regparams for clarity
-regparams.REGISTRATION_TYPE = 'registered';%'registered'; %or 'affine'
+regparams.REGISTRATION_TYPE = 'affine';%'registered'; %or 'affine'
 
 %When calculating RANSAC, do we consider all possible affine warps (true)
 %Or just translation+scale (false)
 regparams.AFFINE_FULL = true;
+
 %Do we want to combine features from multiple channels?
 %keypoints and descriptors
-regparams.REGISTERCHANNELS_SIFT = {'summedNorm'}; %keypoints and descriptors
+%NOTE: b
+regparams.REGISTERCHANNELS_SIFT = {'ch03SHIFT'}; %keypoints and descriptors
 %keypoints only
-regparams.REGISTERCHANNELS_SC = {'summedNorm'};%'ch00','ch01SHIFT','ch02SHIFT','ch03SHIFT'};
+%Note: ShapeContext is an additional description method that can be used for 
+% tricky registrations. However, it is currently deprecated, just keep this {}
+% -Dan G. 2020-09-09
+regparams.REGISTERCHANNELS_SC = {};
 
 %In the Murray et al 2015 this was {'Lectin', 'DAPI', 'Data}
 %Which channels do we warp?
-regparams.CHANNELS = {'summedNorm','ch00','ch01SHIFT','ch02SHIFT','ch03SHIFT'};
+regparams.CHANNELS = {'ch00','ch01SHIFT','ch02SHIFT','ch03SHIFT'};
+%regparams.CHANNELS = {'ch00','summedNorm'}; %for boloramis
 
+%Ideally this is 20, but the bare minimum to solve the affine tform is 6
+regparams.NCORRESPONDENCES_MIN = 10; 
 %Set a threshold for maximum displacement distance?
 %(not appropriate for all datasets. Distance in pixels, -1 for ignore this)
 regparams.DISTANCEQUANTILECUTOFF = .95;
@@ -95,7 +105,7 @@ regparams.DISTANCEQUANTILECUTOFF = .95;
 % with assumptions of the width of the Lectin vessels
 % (5-20 pixels at 2um/pix res) observed and assumption of minor scale
 % disparities (ie <20%)
-params.SCALE_PYRAMID = [5];
+params.SCALE_PYRAMID = [1 3]; %[5];
 
 % parameters for 3DSIFT
 sift_params.TwoPeak_Flag = true;  % Allow 3DSIFT to throw out points, Default: true
@@ -139,7 +149,7 @@ sift_params.y_substream_stride = 256;
 % So far have used one of: 'groundtruth_dictionary_splintr20180621.mat', 'groundtruth_dictionary_CZI20190817.mat', 'groundtruth_dictionary_HTAPP20191008.mat'
 params.GROUND_TRUTH_DICT = 'groundtruth_dictionary_splintr20180621.mat';
 
-params.ISILLUMINA = true;
+params.ISILLUMINA = false;
 params.PUNCTARADIUS_BGESTIMATE = 5;
 
 %batch_processing parameters
