--- a/loadParameters.m.template
+++ b/loadParameters.m.template
@@ -30,6 +30,13 @@ params.NUM_ROUNDS = 5;
 params.BEAD_ZSTART = 1; %goes to :end
 params.COLOR_OFFSETS3D = [20,20,20];
 
+%If the channel data come from very different distributions, applying a quantile Norm 
+%can be useful when combining channel information for the registration. However, 
+%it is highly memory and time intensive, using any other paramter but 'quantile' will
+%simply sum the channels in the normalization step, and this can reduce comptuation time
+%by 20-50%!
+params.NORMALIZE_METHOD = 'quantile';
+
 
 params.PUNCTA_SIZE_THRESHOLD = 30;
 params.PUNCTA_SIZE_MAX = 2000;
